adding scroll reveal

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,32 +2,17 @@
     <article class="hero">
         <h1>RICHARD LUO</h1>
         <h2><span>Logical</span> Design&nbsp;&nbsp;&nbsp;<span>Creative</span> Coding</h2>
-        <img class="mouse-icon" src="/app/assets/img/mouse-outline.png">
+        <a class="mouse-anchor" href='#mission' ui-smooth-scroll>
+            <img class="mouse-icon" src="/app/assets/img/mouse-outline.png"></a>
         <div class="bg-overlay"></div>
     </article>
-    <article class="mission">
-        <h4>MISSION</h4>
-        <p>To create a User Interface for the HORIZON MB™ FT-IR Software that facilitates the acquisition, processing and analysis of various samples as well as managing results.</p>
+    <article class="mission" id="mission">
+        <p><span class="big">Hi,</span> my name is Richard. I enjoy creating <span class="emphasis">minimalist</span> and <span class="emphasis">intuitive</span> business applications that are enjoyable to use.</p>
     </article>
     <article class="portfolio-row">
-        <div class="text-col">
-            <h3>Re-thinking the Information Architecture</h3>
-            <p>We audited the current application version, ran usability tests and analyzed the existing user experience, finding all areas that may slow down the process or confuse a user. Based on our findings, we were able to revise the original layouts significantly, making it simpler and allowing access to all application features much easier. Then we turned the wireframes into a clickable prototype that tested well with the beta users.</p>
+        <img src="/app/assets/img/mobile-first.png" alt="" class="projects">
+        <div class="projects-link">
+            <div class="text">RECENT PROJECTS</div>
         </div>
-        <img class="monitor-col" src="/app/assets/img/monitor_right.png" alt="">
-    </article>
-    <article class="portfolio-row alt">
-        <img class="monitor-col" src="/app/assets/img/monitor_left.png" alt="">
-        <div class="text-col">
-            <h3>Minimalistic Design</h3>
-            <p>We wanted to eliminate all unnecessary elements to create an outstandingly streamlined User Experience. Everything has been worked out around this idea. Every UI element was examined and taken out of the design if it wasn’t necessary for software functionality. As a result, we achieved an exceedingly clean UI yet very simple to maintain and expand.</p>
-        </div>
-    </article>
-    <article class="portfolio-row">
-        <div class="text-col">
-            <h3>Focus on System Status</h3>
-            <p>In our research, we identified the workflows and tasks that users used on a daily basis and those that were used just occasionally. We also gained a unique process understanding by spending time at the ABB labs to watch the real-life process and learn how staff interact with the device. As a result, we could shape the UI toward users’ actual needs and meet their expectations: bold process status, high visibility from a distance, error recovery guidance and straightforward measurement results representation.</p>
-        </div>
-        <img class="monitor-col" src="/app/assets/img/monitor_right.png" alt="">
     </article>
 </section>
