--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
                 <div class="menu-link" ng-click="core.toggleMenu(false)" ui-sref="about" ng-class="{'visible': core.menuIsOpen}">About</div>
                 <div class="menu-link" ng-click="core.toggleMenu(false)" ui-sref="portfolio" ng-class="{'visible': core.menuIsOpen}">Portfolio</div>
                 <div class="menu-link" ng-click="core.toggleMenu(false)" ui-sref="contact" ng-class="{'visible': core.menuIsOpen}">Contact</div>
+                <div class="menu-link social-container" ng-class="{'visible': core.menuIsOpen}">
+                    <a href="#" target="_blank" class="social-link">
+                        <i class="fa fa-github"></i>
+                    </a>
+                     <a href="#" target="_blank" class="social-link">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </div>
             </nav>
         </div>
         <nav class="alt"></nav>
@@ -47,6 +55,8 @@
     <script src="/app/core.controller.js"></script>
     <script src="/app/home/home.controller.js"></script>
     <script src="/app/contact/contact.controller.js"></script>
+    <!-- uiSmoothScrool -->
+    <script src="/vendor/smooth-scroll.directive.js"></script>
 </body>
 
 </html>
