--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,3 +1,18 @@
 <section class="about-view view-container">
-    about
+    <article class="about-heading">
+        <div class="name">
+            <h4>Hey, I'm</h4>
+            <h1>RICHARD LUO</h1>
+            <h3>_________</h3>
+        </div>
+    </article>
+    <article class="fun-facts paragraph">
+    	<h1>A few fun facts about me</h1>
+    	<p>I love playing the ancient game of <a href="https://youtu.be/vFr3K2DORc8?t=1h42m27s" target="_blank">go</a>. I can't do anything without <a href="http://66.90.91.26/ost/tsubasa-chronicle-original-soundtrack-future-soundscape-full-/npawccopbr/03-storm-and-fire.mp3" target="_blank">anime music</a>. I'm just starting to figure out social media. I traveled for 6 months throughout Taiwan, Thailand and Japan on a $1,000 budget. I like to recreate <a href="https://www.youtube.com/watch?v=j_QWpYYD09Q" target="_blank"> gourmet recipes</a>. Gordon Ramsay is my spirit animal.</p>
+    </article>
+    <article class="more paragraph">
+    	<h1>A bit more about me and my path as a web developer</h1>
+    	<p>I've been fascinated with computers since a guest instructor came to my kindergarten to teach <a href="https://www.youtube.com/watch?v=mttyoaspa7U" target="_blank">UBCLogo</a>. Being able to draw shapes with a tiny turtle coincided with my interest for technology, and I've been dabbling with Macromedia Flash (now Adobe) and Photoshop ever since.</p>
+    	<p>During my rebellious phase</p>
+    </article>
 </section>
