--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,18 +1,18 @@
 <section class="home-view view-container">
     <article class="hero">
-        <h1>RICHARD LUO</h1>
-        <h2><span>Logical</span> Design&nbsp;&nbsp;&nbsp;<span>Creative</span> Coding</h2>
+        <h1 data-sr="enter bottom over 1s and move 50px">RICHARD LUO</h1>
+        <h2 data-sr="wait 500ms enter bottom over 1s and move 30px"><span>Logical</span> Design&nbsp;&nbsp;&nbsp;<span>Creative</span> Coding</h2>
         <a class="mouse-anchor" href='#mission' ui-smooth-scroll>
-            <img class="mouse-icon" src="/app/assets/img/mouse-outline.png"></a>
+            <img class="mouse-icon" src="/app/assets/img/mouse-outline.png" data-sr="wait 1s enter bottom over 1s and move 20px"></a>
         <div class="bg-overlay"></div>
     </article>
     <article class="mission" id="mission">
-        <p><span class="big">Hi,</span> my name is Richard. I enjoy creating <span class="emphasis">minimalist</span> and <span class="emphasis">intuitive</span> business applications that are enjoyable to use.</p>
+        <p data-sr="wait 300ms enter bottom over 1s and move 50px"><span class="big">Hi,</span> my name is Richard. I enjoy creating <span class="emphasis">minimalist</span> and <span class="emphasis">intuitive</span> business applications that are enjoyable to use.</p>
     </article>
     <article class="portfolio-row">
-        <img src="/app/assets/img/mobile-first.png" alt="" class="projects">
+        <img src="/app/assets/img/mobile-first.png" alt="" class="projects" data-sr="wait 800ms enter bottom over 1s and move 50px">
         <div class="projects-link">
-            <div class="text">RECENT PROJECTS</div>
+            <div class="text" ui-sref="portfolio">RECENT PROJECTS</div>
         </div>
     </article>
 </section>
