--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -1,63 +1,33 @@
 <section class="portfolio-view view-container">
-    <article class="portfolio-heading">Browse Our UI Design Portfolio</article>
+    <article class="portfolio-heading">Recent Work <span>2016</span></article>
     <article class="projects">
-        <figure>
-            <img src="/app/assets/img/project-placeholder.jpg" alt="">
+        <figure class="figure1" ui-sref="listManager">
+            <img src="/app/assets/img/list-manager2.png" alt="">
             <figcaption>
                 <h2>
-					my <span>project</span>
+					list <span>manager</span>
 				</h2>
-                <p>project description placeholder</p>
+                <p>nested list items editor</p>
                 <a href=""></a>
             </figcaption>
         </figure>
-        <figure>
-            <img src="/app/assets/img/project-placeholder.jpg" alt="">
+        <figure class="figure2">
+            <img src="/app/assets/img/template-manager2.png" alt="">
             <figcaption>
                 <h2>
-					my <span>project</span>
+					template <span>manager</span>
 				</h2>
-                <p>project description placeholder</p>
+                <p>batch templates creator</p>
                 <a href=""></a>
             </figcaption>
         </figure>
-        <figure>
-            <img src="/app/assets/img/project-placeholder.jpg" alt="">
+        <figure class="figure3">
+            <img src="/app/assets/img/schedule-tracker2.png" alt="">
             <figcaption>
                 <h2>
-					my <span>project</span>
+					schedule <span>tracker</span>
 				</h2>
-                <p>project description placeholder</p>
-                <a href=""></a>
-            </figcaption>
-        </figure>
-        <figure>
-            <img src="/app/assets/img/project-placeholder.jpg" alt="">
-            <figcaption>
-                <h2>
-					my <span>project</span>
-				</h2>
-                <p>project description placeholder</p>
-                <a href=""></a>
-            </figcaption>
-        </figure>
-        <figure>
-            <img src="/app/assets/img/project-placeholder.jpg" alt="">
-            <figcaption>
-                <h2>
-					my <span>project</span>
-				</h2>
-                <p>project description placeholder</p>
-                <a href=""></a>
-            </figcaption>
-        </figure>
-        <figure>
-            <img src="/app/assets/img/project-placeholder.jpg" alt="">
-            <figcaption>
-                <h2>
-					my <span>project</span>
-				</h2>
-                <p>project description placeholder</p>
+                <p>email delivery status tracker</p>
                 <a href=""></a>
             </figcaption>
         </figure>
