--- a/app/about/about.html
+++ b/app/about/about.html
@@ -12,7 +12,7 @@
     </article>
     <article class="more paragraph">
     	<h1>A bit more about me and my path as a web developer</h1>
-    	<p>I've been fascinated with computers since a guest instructor came to my kindergarten to teach <a href="https://www.youtube.com/watch?v=mttyoaspa7U" target="_blank">UBCLogo</a>. Being able to draw shapes with a tiny turtle coincided with my interest for technology, and I've been dabbling with Macromedia Flash (now Adobe) and Photoshop ever since.</p>
-    	<p>During my rebellious phase</p>
+    	<p>I've been fascinated with computers since a guest instructor came to my kindergarten to teach <a href="https://www.youtube.com/watch?v=mttyoaspa7U" target="_blank">UBCLogo</a>. Being able to draw shapes with a tiny turtle coincided with my interest for technology and problem-solving, and I've been dabbling with Macromedia Flash (now Adobe) and Photoshop ever since.</p>
+    	<p>Being a gamer, I very much appreciate intuitive and minimalistic UI/UX and strive to </p>
     </article>
 </section>
