--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div class="menu-link" ng-click="core.toggleMenu('link')" ui-sref="portfolio" ng-class="{'visible': core.menuIsOpen}">Portfolio</div>
                 <div class="menu-link" ng-click="core.toggleMenu('link')" ui-sref="contact" ng-class="{'visible': core.menuIsOpen}">Contact</div>
                 <div class="menu-link social-container" ng-class="{'visible': core.menuIsOpen}">
-                    <a href="#" target="_blank" class="social-link">
+                    <a href="https://github.com/richardluo0506" target="_blank" class="social-link">
                         <i class="fa fa-github"></i>
                     </a>
-                     <a href="#" target="_blank" class="social-link">
+                    <a href="#" target="_blank" class="social-link">
                         <i class="fa fa-linkedin"></i>
                     </a>
                 </div>
@@ -34,13 +34,20 @@
         <div class="view-wrapper" ng-class="{'rotated': core.menuIsOpen}">
             <div class="view-overlay" ng-class="{'lighten': core.menuIsOpen}" ng-click="core.toggleMenu('view')"></div>
             <div class="ui-vv" ui-view ng-cloak></div>
-        <footer>
-            <div class="copyright">© 2016. Richard Luo</div>
-            <div class="social"><i class="fa fa-github"></i><i class="fa fa-linkedin"></i></div>
-        </footer>
+            <footer>
+                <div class="copyright">© 2016. Richard Luo</div>
+                <div class="social"><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-github"></i></a><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-linkedin"></i></a></div>
+            </footer>
         </div>
     </div>
     <!-- Dependencies -->
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function() {
+        emailjs.init("user_EWYcOOxNiNYIfXO8NoEuQ");
+    })();
+    </script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <!-- AngularJS -->
