finish basic layout

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -7,12 +7,85 @@
         </div>
     </article>
     <article class="fun-facts paragraph">
-    	<h1>A few fun facts about me</h1>
-    	<p>I love playing the ancient game of <a href="https://youtu.be/vFr3K2DORc8?t=1h42m27s" target="_blank">go</a>. I can't do anything without <a href="http://66.90.91.26/ost/tsubasa-chronicle-original-soundtrack-future-soundscape-full-/npawccopbr/03-storm-and-fire.mp3" target="_blank">anime music</a>. I'm just starting to figure out social media. I traveled for 6 months throughout Taiwan, Thailand and Japan on a $1,000 budget. I like to recreate <a href="https://www.youtube.com/watch?v=j_QWpYYD09Q" target="_blank"> gourmet recipes</a>. Gordon Ramsay is my spirit animal.</p>
+        <h1>A few fun facts about me</h1>
+        <p>I love playing the ancient game of <a href="https://youtu.be/vFr3K2DORc8?t=1h42m27s" target="_blank">go</a>. I can't do anything without <a href="http://66.90.91.26/ost/tsubasa-chronicle-original-soundtrack-future-soundscape-full-/npawccopbr/03-storm-and-fire.mp3" target="_blank">anime music</a>. I'm just starting to figure out social media. I traveled for 6 months throughout Taiwan, Thailand and Japan on a $1,000 budget. I like to recreate <a href="https://www.youtube.com/watch?v=j_QWpYYD09Q" target="_blank"> gourmet recipes</a>. Gordon Ramsay is my spirit animal.</p>
     </article>
     <article class="more paragraph">
-    	<h1>A bit more about me and my path as a web developer</h1>
-    	<p>I've been fascinated with computers since a guest instructor came to my kindergarten to teach <a href="https://www.youtube.com/watch?v=mttyoaspa7U" target="_blank">UBCLogo</a>. Being able to draw shapes with a tiny turtle coincided with my interest for technology and problem-solving, and I've been dabbling with Macromedia Flash (now Adobe) and Photoshop ever since.</p>
-    	<p>Being a gamer, I very much appreciate intuitive and minimalistic UI/UX and strive to </p>
+        <h1>A bit more about me and my path as a web developer</h1>
+        <p>I've been fascinated with computers since a guest instructor came to my kindergarten to teach <a href="https://www.youtube.com/watch?v=mttyoaspa7U" target="_blank">UBCLogo</a>. Being able to draw shapes with a tiny turtle coincided with my interest for technology and problem-solving, and I've been dabbling with Macromedia Flash (now Adobe) and Photoshop ever since.</p>
+        <p>As a gamer growing up, I very much appreciate intuitive and minimalistic design of indie games and strive to build effective interfaces like them.</p>
+    </article>
+    <article class="toolbox paragraph">
+        <h1 data-sr="wait 200ms move 20px enter bottom">My toolbox</h1>
+        <div class="skillset-container">
+            <div class="skillset-column languages" flex layout="column" layout-align="center center">
+                <div class="skillset-subheading">Languages</div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/javascript-logo.png" height="60px"></div>
+                    <div class="skillset-label">Javascript</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/html5-logo.png" height="60px"><img src="/app/assets/img/css3-logo.png" height="50px"></div>
+                    <div class="skillset-label">HTML5/CSS3</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/php-logo.png" height="60px"></div>
+                    <div class="skillset-label">PHP</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/java-logo.png" height="60px"></div>
+                    <div class="skillset-label">Java</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/ruby-logo.png" height="60px"></div>
+                    <div class="skillset-label">Ruby</div>
+                </div>
+            </div>
+            <div class="skillset-column frameworks" flex layout="column" layout-align="start center">
+                <div class="skillset-subheading">Frameworks</div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/angularjs-logo.png" height="60px"></div>
+                    <div class="skillset-label">AngularJS</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/aurelia-logo.png" height="60px"></div>
+                    <div class="skillset-label">Aurelia</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/meteorjs-logo.svg" height="60px"></div>
+                    <div class="skillset-label">MeteorJS</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/rails-logo.png" height="60px"></div>
+                    <div class="skillset-label">Ruby on Rails</div>
+                </div>
+            </div>
+            <div class="skillset-column responsive" flex layout="column" layout-align="start center">
+                <div class="skillset-subheading">Responsive Design</div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/kurisutiiina-logo.png" height="60px"></div>
+                    <div class="skillset-label">Kurisutiiina!</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/bootstrap-logo.png" height="60px"></div>
+                    <div class="skillset-label">Bootstrap</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/angularjs-logo.png" height="60px"></div>
+                    <div class="skillset-label">Angular Material</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/foundation-logo.svg" height="60px"></div>
+                    <div class="skillset-label">Foundation</div>
+                </div>
+                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                    <div class="skillset-icon"><img src="/app/assets/img/jqueryui-logo.png" height="60px"></div>
+                    <div class="skillset-label">jQuery UI</div>
+                </div>
+            </div>
+        </div>
+    </article>
+    <article class="resume paragraph">
+        <a class="resume-btn" target="_blank" href="/app/assets/richard_luo_resume.pdf" download="richard_luo_resume.pdf">Download my resume</a>
     </article>
 </section>
