--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -1,35 +1,38 @@
 <section class="portfolio-view view-container">
     <article class="portfolio-heading">Recent Work <span>2016</span></article>
     <article class="projects">
-        <figure class="figure1" ui-sref="listManager">
+        <figure class="figure1">
             <img src="/app/assets/img/list-manager2.png" alt="">
-            <figcaption>
-                <h2>
-					list <span>manager</span>
-				</h2>
-                <p>nested list items editor</p>
-                <a href=""></a>
-            </figcaption>
+            <a target="_blank" href="https://www.youtube.com/watch?v=aBeXVlwydss">
+                <figcaption>
+                    <h2>
+                    list <span>manager</span>
+                </h2>
+                    <p>nested list items editor</p>
+                </figcaption>
+            </a>
         </figure>
         <figure class="figure2">
             <img src="/app/assets/img/template-manager2.png" alt="">
-            <figcaption>
-                <h2>
-					template <span>manager</span>
-				</h2>
-                <p>batch templates creator</p>
-                <a href=""></a>
-            </figcaption>
+            <a target="_blank" href="https://www.youtube.com/watch?v=wNy_lE2un-s">
+                <figcaption>
+                    <h2>
+                    template <span>manager</span>
+                </h2>
+                    <p>batch templates creator</p>
+                </figcaption>
+            </a>
         </figure>
         <figure class="figure3">
             <img src="/app/assets/img/schedule-tracker2.png" alt="">
-            <figcaption>
-                <h2>
-					schedule <span>tracker</span>
-				</h2>
-                <p>email delivery status tracker</p>
-                <a href=""></a>
-            </figcaption>
+            <a target="_blank" href="https://www.youtube.com/watch?v=56YHxEpgkFM">
+                <figcaption>
+                    <h2>
+                    schedule <span>tracker</span>
+                </h2>
+                    <p>email delivery status tracker</p>
+                </figcaption>
+            </a>
         </figure>
     </article>
 </section>
