--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="https://github.com/richardluo0506" target="_blank" class="social-link">
                         <i class="fa fa-github"></i>
                     </a>
-                    <a href="#" target="_blank" class="social-link">
+                    <a href="https://linkedin.com/in/richardluo0506" target="_blank" class="social-link">
                         <i class="fa fa-linkedin"></i>
                     </a>
                 </div>
@@ -36,7 +36,7 @@
             <div class="ui-vv" ui-view ng-cloak></div>
             <footer>
                 <div class="copyright">© 2016. Richard Luo</div>
-                <div class="social"><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-github"></i></a><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-linkedin"></i></a></div>
+                <div class="social"><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-github"></i></a><a target="_blank" href="https://linkedin.com/in/richardluo0506"><i class="fa fa-linkedin"></i></a></div>
             </footer>
         </div>
     </div>
