--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <a href="https://linkedin.com/in/richardluo0506" target="_blank" class="social-link">
                         <i class="fa fa-linkedin"></i>
                     </a>
+                    <a target="_blank" href="/app/assets/richard_luo_resume.pdf" download="richard_luo_resume.pdf" class="social-link">
+                        <i class="fa fa-file-pdf-o"></i>
+                    </a>
                 </div>
             </nav>
         </div>
@@ -36,7 +39,7 @@
             <div class="ui-vv" ui-view ng-cloak></div>
             <footer>
                 <div class="copyright">© 2016. Richard Luo</div>
-                <div class="social"><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-github"></i></a><a target="_blank" href="https://linkedin.com/in/richardluo0506"><i class="fa fa-linkedin"></i></a></div>
+                <div class="social"><a target="_blank" href="https://github.com/richardluo0506"><i class="fa fa-github"></i></a><a target="_blank" href="https://linkedin.com/in/richardluo0506"><i class="fa fa-linkedin"></i></a><a target="_blank" href="/app/assets/richard_luo_resume.pdf" download="richard_luo_resume.pdf"><i class="fa fa-file-pdf-o"></i></a></div>
             </footer>
         </div>
     </div>
