--- a/app/about/about.html
+++ b/app/about/about.html
@@ -16,69 +16,69 @@
         <p>As a gamer growing up, I very much appreciate intuitive and minimalistic design of indie games and strive to build effective interfaces like them.</p>
     </article>
     <article class="toolbox paragraph">
-        <h1 data-sr="wait 200ms move 20px enter bottom">My toolbox</h1>
+        <h1 class="sr20w700">My toolbox</h1>
         <div class="skillset-container">
             <div class="skillset-column languages" flex layout="column" layout-align="center center">
                 <div class="skillset-subheading">Languages</div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/javascript-logo.png" height="60px"></div>
                     <div class="skillset-label">Javascript</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/html5-logo.png" height="60px"><img src="/app/assets/img/css3-logo.png" height="50px"></div>
                     <div class="skillset-label">HTML5/CSS3</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/php-logo.png" height="60px"></div>
                     <div class="skillset-label">PHP</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/java-logo.png" height="60px"></div>
                     <div class="skillset-label">Java</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/ruby-logo.png" height="60px"></div>
                     <div class="skillset-label">Ruby</div>
                 </div>
             </div>
             <div class="skillset-column frameworks" flex layout="column" layout-align="start center">
                 <div class="skillset-subheading">Frameworks</div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/angularjs-logo.png" height="60px"></div>
                     <div class="skillset-label">AngularJS</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/aurelia-logo.png" height="60px"></div>
                     <div class="skillset-label">Aurelia</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/meteorjs-logo.svg" height="60px"></div>
                     <div class="skillset-label">MeteorJS</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/rails-logo.png" height="60px"></div>
                     <div class="skillset-label">Ruby on Rails</div>
                 </div>
             </div>
             <div class="skillset-column responsive" flex layout="column" layout-align="start center">
                 <div class="skillset-subheading">Responsive Design</div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/kurisutiiina-logo.png" height="60px"></div>
                     <div class="skillset-label">Kurisutiiina!</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/bootstrap-logo.png" height="60px"></div>
                     <div class="skillset-label">Bootstrap</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/angularjs-logo.png" height="60px"></div>
                     <div class="skillset-label">Angular Material</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/foundation-logo.svg" height="60px"></div>
                     <div class="skillset-label">Foundation</div>
                 </div>
-                <div class="skillset" data-sr="wait 200ms move 20px enter bottom">
+                <div class="skillset sr20w700">
                     <div class="skillset-icon"><img src="/app/assets/img/jqueryui-logo.png" height="60px"></div>
                     <div class="skillset-label">jQuery UI</div>
                 </div>
