--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,18 +1,56 @@
 <section class="home-view view-container">
     <article class="hero">
-        <h1 data-sr="enter bottom over 1s and move 50px">RICHARD LUO</h1>
-        <h2 data-sr="wait 500ms enter bottom over 1s and move 30px"><span>Logical</span> Design&nbsp;&nbsp;&nbsp;<span>Creative</span> Coding</h2>
+        <h1 class="sr50">RICHARD LUO</h1>
+        <h2 class="sr30w500"><span>Logical</span> Design&nbsp;&nbsp;&nbsp;<span>Creative</span> Coding</h2>
         <a class="mouse-anchor" href='#mission' ui-smooth-scroll>
-            <img class="mouse-icon" src="/app/assets/img/mouse-outline.png" data-sr="wait 1s enter bottom over 1s and move 20px"></a>
+            <img class="mouse-icon sr20w1000" src="/app/assets/img/mouse-outline.png"></a>
         <div class="bg-overlay"></div>
     </article>
     <article class="mission" id="mission">
-        <p data-sr="wait 300ms enter bottom over 1s and move 50px"><span class="big">Hi,</span> my name is Richard. I enjoy creating <span class="emphasis">minimalist</span> and <span class="emphasis">intuitive</span> business applications that are enjoyable to use.</p>
+        <p class="sr50w300"><span class="big">Hi,</span> my name is Richard. I enjoy creating <span class="emphasis">minimalist</span> and <span class="emphasis">intuitive</span> business applications that are enjoyable to use.</p>
     </article>
     <article class="portfolio-row">
-        <img src="/app/assets/img/mobile-first.png" alt="" class="projects" data-sr="wait 800ms enter bottom over 1s and move 50px">
+        <img src="/app/assets/img/mobile-first.png" alt="" class="projects sr50w800">
         <div class="projects-link">
             <div class="text" ui-sref="portfolio">RECENT PROJECTS</div>
         </div>
+    </article>
+    <article class="projects">
+        <div class="portfolio-heading-container">
+            <article class="portfolio-heading">Recent Work <span>2016</span></article>
+        </div>
+        <figure class="figure1">
+            <img src="/app/assets/img/list-manager2.png" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=aBeXVlwydss">
+                <figcaption>
+                    <h2>
+                    list <span>manager</span>
+                </h2>
+                    <p>nested list items editor</p>
+                </figcaption>
+            </a>
+        </figure>
+        <figure class="figure2">
+            <img src="/app/assets/img/template-manager2.png" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=wNy_lE2un-s">
+                <figcaption>
+                    <h2>
+                    template <span>manager</span>
+                </h2>
+                    <p>batch templates creator</p>
+                </figcaption>
+            </a>
+        </figure>
+        <figure class="figure3">
+            <img src="/app/assets/img/schedule-tracker2.png" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=56YHxEpgkFM">
+                <figcaption>
+                    <h2>
+                    schedule <span>tracker</span>
+                </h2>
+                    <p>email delivery status tracker</p>
+                </figcaption>
+            </a>
+        </figure>
     </article>
 </section>
